syntax = "proto3";
import "code.proto";
import "common.proto";

package message;
option go_package = "/message";

enum ActorType {
  none = 0; //占位
}

message ActorRef {
  uint64 uid = 1; //entityId
  ActorType type = 2; //entityType
}

message NatsRequest {
  ActorRef actorRef = 1; //目标
  uint32 sn = 2; //流水号 暂时客户端用,后续服务器也要做消息mideng
  uint32 cmd = 3; //rpc的id
  bytes data = 4; //数据 //第一个消息必须是登录。gate会保存里面的uid
  string replayUrl = 5; //rpc返回的url-自动填充-不需要设置
}

message NatsReply {
  ActorRef actorRef = 1; //目标
  uint32 sn = 2; //流水号 暂时客户端用,后续服务器也要做消息
  uint32 cmd = 3; //rpc的id
  bytes  data = 4; //数据
  Code code = 5; //错误码
}

message NatsNotify {
  ActorRef actorRef = 1; //目标
  uint32 sn = 2; //流水号 暂时客户端用,后续服务器也要做消息
  uint32 cmd = 3; //rpc的id
  bytes  data = 4; //数据
}
